--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,14 @@
   <packaging>jar</packaging>
 
   <name>jlibra</name>
-  <url>http://maven.apache.org</url>
+  <url>https://github.com/ketola/jlibra</url>
+  
+  <licenses>
+    <license>
+      <name>Apache License, Version 2.0</name>
+      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+    </license>
+  </licenses>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
