--- a/jlibra-core/pom.xml
+++ b/jlibra-core/pom.xml
@@ -10,6 +10,7 @@
   <parent>
     <groupId>dev.jlibra</groupId>
     <artifactId>jlibra-parent</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
   </parent>
 
   <dependencies>
