Fix module relation in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,10 @@
     <maven.compiler.source>8</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
   </properties>
+  
+  <modules>
+    <module>jlibra-core</module>
+  </modules>
 
   <build>
     <plugins>
