Move generated grpc code to a separate module

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
   <modules>
     <module>jlibra-core</module>
     <module>jlibra-examples</module>
+    <module>jlibra-grpc</module>
   </modules>
 
   <build>
