--- a/pom.xml
+++ b/pom.xml
@@ -28,9 +28,26 @@
     <module>jlibra-core</module>
     <module>jlibra-examples</module>
     <module>jlibra-grpc</module>
+    <module>jlibra-integration-tests</module>
   </modules>
 
-  <build>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-failsafe-plugin</artifactId>
+                    <version>3.0.0-M3</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.0.0-M3</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
