--- a/jlibra-examples/pom.xml
+++ b/jlibra-examples/pom.xml
@@ -17,5 +17,15 @@
       <artifactId>jlibra-core</artifactId>
       <version>${project.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+    </dependency>
+
   </dependencies>
 </project>
