--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>8</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
+      <log4j.version>2.12.0</log4j.version>
   </properties>
   
   <modules>
@@ -30,7 +31,6 @@
     <module>jlibra-grpc</module>
     <module>jlibra-integration-tests</module>
   </modules>
-
 
     <build>
         <pluginManagement>
@@ -58,4 +58,19 @@
       </plugin>
     </plugins>
   </build>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-api</artifactId>
+                <version>${log4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-core</artifactId>
+                <version>${log4j.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
