--- a/jlibra-examples/pom.xml
+++ b/jlibra-examples/pom.xml
@@ -17,7 +17,11 @@
       <artifactId>jlibra-core</artifactId>
       <version>${project.version}</version>
     </dependency>
-
+    <dependency>
+      <groupId>com.konghq</groupId>
+      <artifactId>unirest-java</artifactId>
+      <version>2.3.14</version>
+    </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-api</artifactId>
