--- a/jlibra-integration-tests/pom.xml
+++ b/jlibra-integration-tests/pom.xml
@@ -15,6 +15,7 @@
     <artifactId>jlibra-integration-tests</artifactId>
 
     <dependencies>
+
         <dependency>
             <groupId>dev.jlibra</groupId>
             <artifactId>jlibra-core</artifactId>
@@ -55,9 +56,17 @@
             <artifactId>log4j-api</artifactId>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.konghq</groupId>
+            <artifactId>unirest-java</artifactId>
+            <version>2.3.14</version>
             <scope>test</scope>
         </dependency>
 
