[maven-release-plugin] rollback the release of 0.6.0

--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>dev.jlibra</groupId>
   <artifactId>jlibra-parent</artifactId>
-  <version>0.6.0</version>
+  <version>0.5.1-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>jlibra</name>
@@ -27,7 +29,6 @@
     <connection>scm:git:git://github.com/ketola/jlibra.git</connection>
     <developerConnection>scm:git:ssh://github.com/ketola/jlibra.git</developerConnection>
     <url>http://github.com/ketola/jlibra/tree/master</url>
-    <tag>0.6.0</tag>
   </scm>
 
   <properties>
