--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,8 @@
   </developers>
 
   <scm>
-    <connection>scm:git:git://github.com/ketola/jlibra.git</connection>
-    <developerConnection>scm:git:ssh://github.com/ketola/jlibra.git</developerConnection>
+    <connection>scm:git:ssh://git@github.com/ketola/jlibra.git</connection>
+    <developerConnection>scm:git:ssh://git@github.com/ketola/jlibra.git</developerConnection>
     <url>http://github.com/ketola/jlibra/tree/master</url>
   </scm>
 
@@ -81,6 +81,8 @@
         <version>2.5.3</version>
         <configuration>
           <autoVersionSubmodules>true</autoVersionSubmodules>
+          <releaseProfiles>release</releaseProfiles>
+          <tagNameFormat>@{project.version}</tagNameFormat>
         </configuration>
       </plugin>
     </plugins>
