--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,8 @@
   </developers>
 
   <scm>
-    <connection>scm:git:ssh://git@github.com/ketola/jlibra.git</connection>
-    <developerConnection>scm:git:ssh://git@github.com/ketola/jlibra.git</developerConnection>
+    <connection>scm:git:git://github.com/ketola/jlibra.git</connection>
+    <developerConnection>scm:git:git://github.com/ketola/jlibra.git</developerConnection>
     <url>http://github.com/ketola/jlibra/tree/master</url>
   </scm>
 
