--- a/pom.xml
+++ b/pom.xml
@@ -38,13 +38,6 @@
     <log4j.version>2.13.0</log4j.version>
   </properties>
 
-  <modules>
-    <module>jlibra-core</module>
-    <module>jlibra-examples</module>
-    <module>jlibra-grpc</module>
-    <module>jlibra-integration-tests</module>
-  </modules>
-
   <distributionManagement>
     <snapshotRepository>
       <id>ossrh</id>
@@ -95,7 +88,23 @@
 
   <profiles>
     <profile>
+      <id>development</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <modules>
+        <module>jlibra-core</module>
+        <module>jlibra-examples</module>
+        <module>jlibra-grpc</module>
+        <module>jlibra-integration-tests</module>
+      </modules>
+    </profile>
+    <profile>
       <id>release</id>
+      <modules>
+        <module>jlibra-core</module>
+        <module>jlibra-grpc</module>
+      </modules>
       <build>
         <plugins>
           <plugin>
