--- a/jlibra-examples/pom.xml
+++ b/jlibra-examples/pom.xml
@@ -30,6 +30,11 @@
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>net.jodah</groupId>
+      <artifactId>failsafe</artifactId>
+      <version>2.3.3</version>
+    </dependency>
   </dependencies>
 
   <build>
