--- a/jlibra-examples/src/main/resources/log4j2.properties
+++ b/jlibra-examples/src/main/resources/log4j2.properties
@@ -4,7 +4,11 @@ appender.console.name = STDOUT
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = %d{HH:mm:ss.SSS}| %m%n
 appender.console.filter.threshold.type = ThresholdFilter
-appender.console.filter.threshold.level = info
+appender.console.filter.threshold.level = debug
 
-rootLogger.level = debug
+logger.jlibra.name = dev.jlibra
+logger.jlibra.level = debug
+
+rootLogger.level = info
+
 rootLogger.appenderRef.stdout.ref = STDOUT
