--- a/jlibra-examples/pom.xml
+++ b/jlibra-examples/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>dev.jlibra</groupId>
     <artifactId>jlibra-parent</artifactId>
-    <version>0.8.1-SNAPSHOT</version>
+    <version>0.9.0</version>
   </parent>
 
   <dependencies>
