--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,26 @@
         <artifactId>log4j-slf4j-impl</artifactId>
         <version>${log4j.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>${slf4j.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.12</version>
+      </dependency>
+      <dependency>
+        <groupId>org.hamcrest</groupId>
+        <artifactId>hamcrest-library</artifactId>
+        <version>1.3</version>
+      </dependency>
+      <dependency>
+        <groupId>com.konghq</groupId>
+        <artifactId>unirest-java</artifactId>
+        <version>2.3.14</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -96,12 +116,15 @@
       <modules>
         <module>jlibra-core</module>
         <module>jlibra-examples</module>
+        <module>jlibra-integration-tests</module>
+        <module>jlibra-poller</module>
       </modules>
     </profile>
     <profile>
       <id>release</id>
       <modules>
         <module>jlibra-core</module>
+        <module>jlibra-poller</module>
       </modules>
       <build>
         <plugins>
