--- a/jlibra-integration-tests/pom.xml
+++ b/jlibra-integration-tests/pom.xml
@@ -16,6 +16,20 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>log4j-over-slf4j</artifactId>
+    </dependency>
+     <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-slf4j-impl</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>dev.jlibra</groupId>
+      <artifactId>jlibra-poller</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>dev.jlibra</groupId>
       <artifactId>jlibra-core</artifactId>
       <version>${project.version}</version>
