Fix javadoc generation

--- a/pom.xml
+++ b/pom.xml
@@ -151,15 +151,20 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
-            <version>3.1.1</version>
+            <version>3.2.0</version>
             <executions>
               <execution>
+              <phase>install</phase>
                 <id>attach-javadocs</id>
                 <goals>
                   <goal>jar</goal>
                 </goals>
               </execution>
             </executions>
+            <configuration>
+            <additionalparam>-Xdoclint:none</additionalparam>
+            <sourcepath>${project.basedir}/jlibra-core/src;${project.basedir}/jlibra-poller/src</sourcepath>
+            </configuration>
           </plugin>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
