--- a/pom.xml
+++ b/pom.xml
@@ -154,7 +154,6 @@
             <version>3.2.0</version>
             <executions>
               <execution>
-              <phase>install</phase>
                 <id>attach-javadocs</id>
                 <goals>
                   <goal>jar</goal>
@@ -162,8 +161,7 @@
               </execution>
             </executions>
             <configuration>
-            <additionalparam>-Xdoclint:none</additionalparam>
-            <sourcepath>${project.basedir}/jlibra-core/src;${project.basedir}/jlibra-poller/src</sourcepath>
+            <sourcepath>src/main/java;target/generated-sources/annotations</sourcepath>
             </configuration>
           </plugin>
           <plugin>
