--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,26 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
+        <groupId>org.bouncycastle</groupId>
+        <artifactId>bcprov-jdk15on</artifactId>
+        <version>1.67</version>
+      </dependency>
+      <dependency>
+        <groupId>org.immutables</groupId>
+        <artifactId>value</artifactId>
+        <version>2.8.8</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.datatype</groupId>
+        <artifactId>jackson-datatype-jdk8</artifactId>
+        <version>2.11.2</version>
+      </dependency>
+      <dependency>
+        <groupId>net.jodah</groupId>
+        <artifactId>failsafe</artifactId>
+        <version>2.4.0</version>
+      </dependency>
+      <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>log4j-over-slf4j</artifactId>
         <version>${slf4j.version}</version>
@@ -92,7 +112,7 @@
       <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-engine</artifactId>
-        <version>5.6.2</version>
+        <version>5.7.0</version>
         <scope>test</scope>
       </dependency>
       <dependency>
@@ -161,7 +181,7 @@
               </execution>
             </executions>
             <configuration>
-            <sourcepath>src/main/java;target/generated-sources/annotations</sourcepath>
+              <sourcepath>src/main/java;target/generated-sources/annotations</sourcepath>
             </configuration>
           </plugin>
           <plugin>
